# nanoipc

./: .gitignore  CMakeLists.txt  README.md  client_implementation.md  nanoipc.cpp  nanoipc.hpp  nanoipc_client.hpp  nanoipc_server.cpp  nanoipc_server.hpp  nanoipc_utils.cpp  nanoipc_utils.hpp
.devcontainer/: devcontainer.json
.github/skills/code-docs/: SKILL.md
.github/workflows/: on_pr_job.yml
apps/: CMakeLists.txt
apps/linux_uart_cobs_client/: CMakeLists.txt  README.md
apps/linux_uart_cobs_client/src/: linux_uart_cobs_client.cpp
apps/linux_uart_cobs_client/tests/: CMakeLists.txt
apps/linux_uart_cobs_client/tests/src/: it_linux_uart_cobs_client.cpp
apps/linux_uart_json_client/: CMakeLists.txt  README.md
apps/linux_uart_json_client/src/: linux_uart_json_client.cpp
apps/linux_uart_json_client/tests/: CMakeLists.txt
apps/linux_uart_json_client/tests/src/: it_linux_uart_json_client.cpp
docker/: dev.dockerfile
docs/: design.md  digital-twin-hld.md  uart-emulation.md
example/: task.md
example/api/: CMakeLists.txt  example_request_writer.hpp  example_response_reader.hpp  example_response_writer.hpp
example/example_client/: CMakeLists.txt
example/example_client/src/: example_client.cpp
example/example_server/: CMakeLists.txt  avr-toolchain.cmake
example/example_server/src/: example_server.cpp
example/proto/: CMakeLists.txt  example.proto
frame/: CMakeLists.txt
frame/include/: cobs_frame_reader.hpp  cobs_frame_writer.hpp  frame_reader.hpp  frame_writer.hpp  read_buffer.hpp  ring_buffer.hpp
frame/linux/: CMakeLists.txt
frame/linux/include/: linux_uart_cobs_frame_reader.hpp  linux_uart_cobs_frame_writer.hpp
frame/linux/src/: json_client.cpp
frame/linux/tests/: CMakeLists.txt
frame/linux/tests/src/: ut_cobs_frame.cpp  ut_linux_uart_cobs_frame.cpp  ut_ring_buffer.cpp
frame/tests/: CMakeLists.txt
frame/tests/src/: ut_cobs_frame.cpp  ut_frame.cpp  ut_frame_reader.cpp  ut_ring_buffer.cpp
include/: reader.hpp  writer.hpp
message/: CMakeLists.txt
message/include/: json_message_reader.hpp  json_message_writer.hpp  pb_message_reader.hpp  pb_message_writer.hpp
message/tests/: CMakeLists.txt
message/tests/src/: ut_json_message.cpp  ut_pb_message.cpp
nanoipc_utils/: CMakeLists.txt  nanoipc_ring_buffer.hpp  nanoipc_utils.cpp  nanoipc_utils.hpp
nanopb_utils/: CMakeLists.txt  nanopb_parser.hpp  nanopb_serializer.hpp
nanopb_utils/tests/: CMakeLists.txt
nanopb_utils/tests/src/: test.proto  test_message.hpp  ut_nanopb_parser.cpp  ut_nanopb_serializer.cpp
testing/: CMakeLists.txt
testing/linux/: CMakeLists.txt
testing/linux/include/: virtual_uart.hpp
tests/: CMakeLists.txt
tests/src/: ut_nanoipc_tests.cpp
utils/include/: uart_connection.hpp
utils/src/: uart_connection.cpp
utils/tests/: CMakeLists.txt
utils/tests/src/: json_client.cpp  ut_uart_connection.cpp
